# TermDash

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  term_dash.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  release.md
termdash/: __init__.py  cli.py  config.py
tests/: test_cli_args.py  test_config.py  test_package.py
